--- a/Team_41_Final_Report.ipynb
+++ b/Team_41_Final_Report.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -191,7 +191,7 @@
     "\n",
     "2. Upload the local repo \"descemb\" to \"Project\" folder.\n",
     "\n",
-    "4. Download the data and setup the directory for Input path as prescribed in the Data section below.\n"
+    "4. Download the data and setup the directory for Input path as prescribed in the Data section below if running with full MIMIC III dataset. The github repo already has the demo database downloaded so this step is optional if only using MIMIC III demo database to run the script.\n"
    ]
   },
   {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "HLQqIBW9ZivG"
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -660,7 +660,7 @@
     "\n",
     "* lr is set to 0.001, we tried to run the pretraining with smaller lr 0.0001 but the pretraining time gets increased significanlty and we didn't observe any meaningful impromevement, so we kept the lr as .001 for this script.\n",
     "\n",
-    "* n_epochs set to 50, at this epoch model is still not converging but we kept it at 50 for reasonable runtime. Results with n_epoch = 500 is shown below for reference.\n",
+    "* Results with n_epoch = 500 is shown in the report.This takes about 21m to run with 500 epochs, we have commented out the block and uncommented the block with epochs 10 so the script can finish within 8 min timelimit.\n",
     "\n",
     "* Other model parameters are set to default, refer to\n",
     "main.py for more details about deafult params setting.\n",
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -717,14 +717,14 @@
    },
    "outputs": [],
    "source": [
-    "!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path --model descemb_rnn --src_data mimiciii --ratio 100 --n_epochs 50 --lr .001 --value_mode NV --task mlm\n",
+    "!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path --model descemb_rnn --src_data mimiciii --ratio 100 --n_epochs 10 --lr .001 --value_mode NV --task mlm\n",
     "# input_path must be preproces destination path\n",
-    "# n_epochs 50"
+    "# n_epochs 10 for demo purpose"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -5292,7 +5292,7 @@
     }
    ],
    "source": [
-    "!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path --model descemb_rnn --src_data mimiciii --ratio 100 --n_epochs 500 --lr .001 --value_mode NV --task mlm\n",
+    "#!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path --model descemb_rnn --src_data mimiciii --ratio 100 --n_epochs 500 --lr .001 --value_mode NV --task mlm\n",
     "# input_path must be preproces destination path\n",
     "# n_epochs 500"
    ]
@@ -5314,14 +5314,14 @@
    },
    "outputs": [],
    "source": [
-    "#!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path/mlm --model codeemb --src_data mimiciii --ratio 100 --n_epochs 50 --task w2v\n",
+    "!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path/mlm --model codeemb --src_data mimiciii --ratio 100 --n_epochs 10 --task w2v\n",
     "# input_path must be preproces destination path\n",
-    "# n_epochs 50"
+    "# n_epochs 10 for demo purpose"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -6541,7 +6541,7 @@
     }
    ],
    "source": [
-    "!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path/mlm --model codeemb --src_data mimiciii --ratio 100 --n_epochs 500 --task w2v\n",
+    "#!python main.py --distributed_world_size 1 --input_path /content/drive/MyDrive/Project/DescEmb/data_output_path/mlm --model codeemb --src_data mimiciii --ratio 100 --n_epochs 500 --task w2v\n",
     "# input_path must be preproces destination path\n",
     "# n_epochs 500"
    ]
@@ -6590,13 +6590,13 @@
    "source": [
     "***Pre-train a DescEmb model with Masked Language Modeling (MLM)***\n",
     "\n",
-    "* Model still showing training loss oscilating between 0.4 and 0.3 as we increasing the no of epochs higher than 300, with n_epochs = 500 we observed average training loss is 0.448\n",
+    "* Model still showing training loss oscilating between 0.3 and 0.4 as we increasing the no of epochs higher than 300, with n_epochs = 500 we observed average training loss is 0.448\n",
     "\n",
     "***Pre-train a CodeEmb model with Word2Vec***\n",
     "\n",
     "* Model converges at n_epochs = 393 with average training loss 0.332\n",
     "\n",
-    "so, in this experiment, we can not say the description embedding model pretraining shows better performance than a standard word2vec embedding model based on the average training loss with lr = .001. But here we need remember the dataset used for training is a smaller subset and also we could not lower the leraning rate than .001 inorder to complete this step with the given limited computing resource. Size of training data is defenetely a key factor when we pretrain a model from scratch."
+    "so, in this experiment, we can not say the description embedding model pretraining shows better performance than a standard word2vec embedding model based on the average training loss with lr = .001. But here we need remember the dataset used for training is a smaller subset and also we could not lower the leraning rate than .001 inorder to complete this step with the given limited computing resource. Size of training data is defenetely a key factor when we pretrain a model from scratch. But as the model shows overfitting with this small dataset, we can say the model passed the sanity check."
    ]
   },
   {
@@ -6625,7 +6625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -6648,7 +6648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7290,7 +7290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7322,7 +7322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7540,7 +7540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7753,7 +7753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -8028,7 +8028,7 @@
     "\n",
     "* Average precision score shows higher in DescEmb than Code Emb in similar setting.\n",
     "\n",
-    "* Based the training loss and precision score in model prediction, we can see descemb model performs better than codeemb.\n",
+    "* Based the training loss and precision score in model prediction, we can see descemb model performs better than codeemb. But due to small training data the model shows overfitting so confidence on this results are not high, and running the experiemnt with full dataset is recomended.\n",
     "\n",
     "**Ablation Study**\n",
     "\n",
@@ -8050,7 +8050,7 @@
     "id": "6N8MD5XCoGC6"
    },
    "source": [
-    "* Obtaining enough computation resource such GPU Ram was challenging with Google Colab offering to run the experient with Full MIMIC III database which is 6 GB of uncompressed data. We tried to process the full dataset with Colab Pro subscription which got exhausted in 2 hrs of runtime and couldn't complete the preprocessing of data. Due to this we have chosen to run this experiemt with MIMIC III demo database which is a much smaller subset of data and obviously is not enough to train the model to conclude on our hypothesis with full confidence. But we certainly observed that descemb embedding model shows better performance than codeemb in terms of training loss and average precision metrics.\n",
+    "* Obtaining enough computation resource such GPU Ram was challenging with Google Colab offering to run the experient with Full MIMIC III database which is 6 GB of uncompressed data. We tried to process the full dataset with Colab Pro subscription which got exhausted in 2 hrs of runtime and couldn't complete the preprocessing of data. Due to this we have chosen to run this experiemt with MIMIC III demo database which is a much smaller subset of data and obviously is not enough to train the model to conclude on our hypothesis with full confidence. But we observed that descemb embedding model shows better performance than codeemb in terms of training loss and average precision metrics but as it shows overfitting, we recomend to run this experiment with full dataset.\n",
     "\n",
     "* We have understood the model architecture and novelty in this paper to use a text encoder and value embedding method to do a description based predictive model which is code agnostic and this opens door to unifying the heterogenous EHR data used in many hospitals and use that for more effective healthcare predictive learning which was otherwise not possible with the code embedding architecture.\n",
     "\n",
@@ -8077,6 +8077,24 @@
     "Github link to colab notebook: https://github.com/guhaindranil83/DescEmb.git\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wS9dIEREQYca"
+   },
+   "source": [
+    "# Demo Video Presentation Link"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "w9FqaXTWQiwt"
+   },
+   "source": [
+    "https://youtu.be/55bUz7GQFSQ?si=u91KyHJxiRPFUnq7\n"
+   ]
   }
  ],
  "metadata": {
@@ -8086,8 +8104,7 @@
     "qH75TNU71eRH"
    ],
    "gpuType": "T4",
-   "provenance": [],
-   "toc_visible": true
+   "provenance": []
   },
   "kernelspec": {
    "display_name": "Python 3",
