--- a/Team_41_Final_Report.ipynb
+++ b/Team_41_Final_Report.ipynb
@@ -9,8 +9,8 @@
     "# CS 598 Deep Learning for HealthCare - Final Project\n",
     "***Team 41***\n",
     "\n",
-    "Indranil Guha| Iguha4@illinois.edu  \n",
-    "Snehangshu Bhattacharjee | sb8@illinois.edu\n",
+    "Indranil Guha| iguha4@illinois.edu  \n",
+    "Snehangshu Bhattacharjee | ssb8@illinois.edu\n",
     "\n",
     "\n",
     "\n"
